melhorias no codigo e inclui imagens na timeline

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta name="keywords" content="black hole, meta, buraco negro">
   <link rel="stylesheet" href="assets/css/main.css">
   <link rel="stylesheet" href="assets/css/timeline.css">
-  <link rel="icon" href="assets/img/milkyway-favicon.png" type="image/ico"/>
-  <link rel="shortcut icon" href="assets/img/milkyway-favicon.png" type="image/x-icon"/>
+  <link rel="icon" href="assets/img/milkyway-favicon.png" type="image/ico" />
+  <link rel="shortcut icon" href="assets/img/milkyway-favicon.png" type="image/x-icon" />
 
 </head>
 
@@ -23,7 +23,7 @@
       <img src="assets/img/milkyway-favicon.png" alt="Global">
       <p>Buracos Negros</p>
     </a>
-    <p class="device-notification--message">Recomendamos que utilize o site com a orientação "Retrato" 
+    <p class="device-notification--message">Recomendamos que utilize o site com a orientação "Retrato"
       do celular ou que acesse novamente com uma tela maior.
     </p>
   </div>
@@ -34,21 +34,21 @@
       <div id="viewport" class="l-viewport">
         <div class="l-wrapper">
           <header class="header">
-            <a class="header--logo" href="#0">
+            <div class="header--logo">
               <img src="assets/img/milkyway-favicon.png" alt="Global">
               <p>Buracos Negros</p>
-            </a>
+            </div>
             <div class="header--nav-toggle">
               <span></span>
             </div>
           </header>
           <nav class="l-side-nav">
             <ul class="side-nav">
-              <li class="is-active"><span>Home</span></li>
+              <li class="is-active"><span>Página<br>Inicial</span></li>
               <li><span>Linha<br>do<br>Tempo</span></li>
-              <li><span>About</span></li>
+              <li><span>Mapa<br>Conceitual</span></li>
               <li><span>Simulação</span></li>
-              <li><span>TESTE</span></li>
+              <li><span>Calculadora</span></li>
               <li><span>Quem somos</span></li>
             </ul>
           </nav>
@@ -77,6 +77,10 @@
                     <h3>Simulação</h3>
                     <p>Veja como ocorre a distorção no espaço-tempo</p>
                   </span>
+                  <span>
+                    <h3>Calculadora</h3>
+                    <p>Verifique se o corpo informado seria um buraco negro</p>
+                  </span>
                 </div>
               </div>
             </li>
@@ -87,12 +91,20 @@
                 <div id="timeline">
                   <ul id="dates">
                     <li><a href="#1687">1687</a></li>
-                    <li><a href="#1930">1930</a></li>
+                    <li><a href="#1905">1905</a></li>
+                    <li><a href="#1915-0">1915</a></li>
+                    <li><a href="#1915-1">1915</a></li>
+                    <li><a href="#1916">1916</a></li>
+                    <li><a href="#1939">1939</a></li>
+                    <li><a href="#1943">1943</a></li>
+                    <li><a href="#1960">1960</a></li>
+                    <li><a href="#1970">1970</a></li>
+                    <li><a href="#2019">2019</a></li>
                   </ul>
                   <ul id="issues">
                     <li id="1687">
-                      <img src="assets/img/timeline/1.png" alt="imagemLinhaTempo" />
-                      <h1>1687 - Lei da Gravidade</h1>
+                      <img src="assets/img/timeline/newton.jpg" alt="imagemLinhaTempo" />
+                      <h1>Lei da Gravidade</h1>
                       <h2>Isaac Newton</h2>
                       <p>Donec semper quam scelerisque tortor dictum gravida. In hac habitasse platea dictumst. Nam
                         pulvinar, odio sed rhoncus suscipit, sem diam ultrices mauris, eu consequat purus metus eu
@@ -100,21 +112,100 @@
                         turpis sollicitudin venenatis sed eu odio. Praesent eget neque eu eros interdum malesuada non
                         vel leo. Sed fringilla porta ligula.</p>
                     </li>
-                    <li id="1930">
-                      <img src="assets/img/timeline/2.png" alt="imagemLinhaTempo" />
-                      <h1>1930</h1>
+                    <li id="1905">
+                      <img src="assets/img/timeline/einstein.jpg" alt="imagemLinhaTempo" />
+                      <h1>Teoria da Relatividade Restrita</h1>
+                      <h2>Albert Einstein</h2>
                       <p>Donec semper quam scelerisque tortor dictum gravida. In hac habitasse platea dictumst. Nam
                         pulvinar, odio sed rhoncus suscipit, sem diam ultrices mauris, eu consequat purus metus eu
                         velit. Proin metus odio, aliquam eget molestie nec, gravida ut sapien. Phasellus quis est sed
                         turpis sollicitudin venenatis sed eu odio. Praesent eget neque eu eros interdum malesuada non
                         vel leo. Sed fringilla porta ligula.</p>
                     </li>
-
+                    <li id="1915-0">
+                      <img src="assets/img/timeline/chandrasekhar.jpg" alt="imagemLinhaTempo" />
+                      <h1>Anã Branca</h1>
+                      <h2>Chandrasekhar</h2>
+                      <p>Donec semper quam scelerisque tortor dictum gravida. In hac habitasse platea dictumst. Nam
+                        pulvinar, odio sed rhoncus suscipit, sem diam ultrices mauris, eu consequat purus metus eu
+                        velit. Proin metus odio, aliquam eget molestie nec, gravida ut sapien. Phasellus quis est sed
+                        turpis sollicitudin venenatis sed eu odio. Praesent eget neque eu eros interdum malesuada non
+                        vel leo. Sed fringilla porta ligula.</p>
+                    </li>
+                    <li id="1915-1">
+                      <img src="assets/img/timeline/linguinhainsten.jpg" alt="imagemLinhaTempo" />
+                      <h1>Teoria da Relatividade Geral</h1>
+                      <h2>Albert Einstein</h2>
+                      <p>Donec semper quam scelerisque tortor dictum gravida. In hac habitasse platea dictumst. Nam
+                        pulvinar, odio sed rhoncus suscipit, sem diam ultrices mauris, eu consequat purus metus eu
+                        velit. Proin metus odio, aliquam eget molestie nec, gravida ut sapien. Phasellus quis est sed
+                        turpis sollicitudin venenatis sed eu odio. Praesent eget neque eu eros interdum malesuada non
+                        vel leo. Sed fringilla porta ligula.</p>
+                    </li>
+                    <li id="1916">
+                      <img src="assets/img/timeline/schwarzschild.jpg" alt="imagemLinhaTempo" />
+                      <h1>Raio de Schwarzschild</h1>
+                      <h2>Karl Schwarzschild</h2>
+                      <p>Donec semper quam scelerisque tortor dictum gravida. In hac habitasse platea dictumst. Nam
+                        pulvinar, odio sed rhoncus suscipit, sem diam ultrices mauris, eu consequat purus metus eu
+                        velit. Proin metus odio, aliquam eget molestie nec, gravida ut sapien. Phasellus quis est sed
+                        turpis sollicitudin venenatis sed eu odio. Praesent eget neque eu eros interdum malesuada non
+                        vel leo. Sed fringilla porta ligula.</p>
+                    </li>
+                    <li id="1939">
+                      <img src="assets/img/timeline/Volkoff.jpg" alt="imagemLinhaTempo" />
+                      <h1>Estrela de Nêutrons</h1>
+                      <h2>Volkoff-Oppenheimer</h2>
+                      <p>Donec semper quam scelerisque tortor dictum gravida. In hac habitasse platea dictumst. Nam
+                        pulvinar, odio sed rhoncus suscipit, sem diam ultrices mauris, eu consequat purus metus eu
+                        velit. Proin metus odio, aliquam eget molestie nec, gravida ut sapien. Phasellus quis est sed
+                        turpis sollicitudin venenatis sed eu odio. Praesent eget neque eu eros interdum malesuada non
+                        vel leo. Sed fringilla porta ligula.</p>
+                    </li>
+                    <li id="1943">
+                      <img src="assets/img/timeline/seyfert.jpg" alt="imagemLinhaTempo" />
+                      <h1>Galáxia de Seyfert</h1>
+                      <h2>Carl Seyfert</h2>
+                      <p>Donec semper quam scelerisque tortor dictum gravida. In hac habitasse platea dictumst. Nam
+                        pulvinar, odio sed rhoncus suscipit, sem diam ultrices mauris, eu consequat purus metus eu
+                        velit. Proin metus odio, aliquam eget molestie nec, gravida ut sapien. Phasellus quis est sed
+                        turpis sollicitudin venenatis sed eu odio. Praesent eget neque eu eros interdum malesuada non
+                        vel leo. Sed fringilla porta ligula.</p>
+                    </li>
+                    <li id="1960">
+                      <img src="assets/img/timeline/quasar.jpg" alt="imagemLinhaTempo" />
+                      <h1>Quasar</h1>
+                      <h2>Vários astrofísicos</h2>
+                      <p>Donec semper quam scelerisque tortor dictum gravida. In hac habitasse platea dictumst. Nam
+                        pulvinar, odio sed rhoncus suscipit, sem diam ultrices mauris, eu consequat purus metus eu
+                        velit. Proin metus odio, aliquam eget molestie nec, gravida ut sapien. Phasellus quis est sed
+                        turpis sollicitudin venenatis sed eu odio. Praesent eget neque eu eros interdum malesuada non
+                        vel leo. Sed fringilla porta ligula.</p>
+                    </li>
+                    <li id="1970">
+                      <img src="assets/img/timeline/buraconegro.jpeg" alt="imagemLinhaTempo" />
+                      <h1>Detecção de um buraco negro</h1>
+                      <h2>Vários astrofísicos</h2>
+                      <p>Donec semper quam scelerisque tortor dictum gravida. In hac habitasse platea dictumst. Nam
+                        pulvinar, odio sed rhoncus suscipit, sem diam ultrices mauris, eu consequat purus metus eu
+                        velit. Proin metus odio, aliquam eget molestie nec, gravida ut sapien. Phasellus quis est sed
+                        turpis sollicitudin venenatis sed eu odio. Praesent eget neque eu eros interdum malesuada non
+                        vel leo. Sed fringilla porta ligula.</p>
+                    </li>
+                    <li id="2019">
+                      <img src="assets/img/timeline/katie.jpg" alt="imagemLinhaTempo" />
+                      <h1>Imagem de Buraco Negro</h1>
+                      <h2>Katie Bouman</h2>
+                      <p>Donec semper quam scelerisque tortor dictum gravida. In hac habitasse platea dictumst. Nam
+                        pulvinar, odio sed rhoncus suscipit, sem diam ultrices mauris, eu consequat purus metus eu
+                        velit. Proin metus odio, aliquam eget molestie nec, gravida ut sapien. Phasellus quis est sed
+                        turpis sollicitudin venenatis sed eu odio. Praesent eget neque eu eros interdum malesuada non
+                        vel leo. Sed fringilla porta ligula.</p>
+                    </li>
                   </ul>
                   <a href="#" id="next">+</a>
                   <a href="#" id="prev">-</a>
                 </div>
-
 
                 <!-- <div class="about--banner">
                 <h2>We<br>believe in<br>passionate<br>people</h2>
@@ -162,10 +253,12 @@
               </div>
             </li>
 
-
             <li class="l-section section">
-              <div id="buraco-negro-canvas" class="hire">
-                <div id="canvas_placeholder"></div>
+              <div class="simulacao">
+                <h2>Simulação da distorção causada por um buraco negro</h2>
+                <div id="buraco-negro-canvas" class="hire">
+                  <div id="canvas_placeholder"></div>
+                </div>
               </div>
             </li>
 
@@ -207,18 +300,17 @@
                       </a>
                     </li>
                     <li class="slider--item slider--item-last">
-                        <a href="#0">
-                          <div class="slider--item-image">
-                            <img src="assets/img/milkway.jpg" alt="Paulo Vitor">
-                          </div>
-                          <p class="slider--item-title">Paulo Vitor</p>
-                          <p class="slider--item-description">Aluno do 3º ano de Informática</p>
-                        </a>
-                      </li>
+                      <a href="#0">
+                        <div class="slider--item-image">
+                          <img src="assets/img/milkway.jpg" alt="Paulo Vitor">
+                        </div>
+                        <p class="slider--item-title">Paulo Vitor</p>
+                        <p class="slider--item-description">Aluno do 3º ano de Informática</p>
+                      </a>
+                    </li>
                   </ul>
                   <div class="slider--prev">
-                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
-                      xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118"
+                    <svg version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 150 118"
                       style="enable-background:new 0 0 150 118;" xml:space="preserve">
                       <g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)">
                         <path d="M561,1169C525,1155,10,640,3,612c-3-13,1-36,8-52c8-15,134-145,281-289C527,41,562,10,590,10c22,0,41,9,61,29
@@ -228,8 +320,7 @@
                     </svg>
                   </div>
                   <div class="slider--next">
-                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
-                      xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118"
+                    <svg version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 150 118"
                       style="enable-background:new 0 0 150 118;" xml:space="preserve">
                       <g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)">
                         <path
@@ -246,11 +337,11 @@
       </div>
     </div>
     <ul class="outer-nav">
-      <li class="is-active">Home</li>
+      <li class="is-active">Página Inicial</li>
       <li>Linha do Tempo</li>
-      <li>About</li>
+      <li>Mapa Conceitual</li>
       <li>Simulação</li>
-      <li>TESTE</li>
+      <li>Calculadora</li>
       <li>Quem somos</li>
     </ul>
   </div>
