Teste do SVG para o Mapa Mental

--- a/index.html
+++ b/index.html
@@ -264,6 +264,21 @@
 
             <li class="l-section section">
               <div class="a">
+                  <svg width="1000" height="600">
+                      <g>
+                        <rect class="rects" x="100" y="100" />
+                        <text class="texts" x="110" y="120">
+                          hello
+                        </text>
+                      </g>
+                      <line class="lines" x1="190" y1="132" x2="260" y2="260" />
+                      <g>
+                        <rect class="rects" x="250" y="250" />
+                        <text class="texts" x="260" y="270">
+                          hello2
+                        </text>
+                      </g>
+                    </svg>
               </div>
             </li>
 
