--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               <li><span>Mapa<br>Conceitual</span></li>
               <li><span>Simulação</span></li>
               <li><span>Calculadora</span></li>
-              <li><span>Quem somos</span></li>
+              <li><span>Quem Somos</span></li>
             </ul>
           </nav>
           <ul class="l-main-content main-content">
@@ -57,7 +57,7 @@
 
               <div class="intro">
                 <div class="intro--banner">
-                  <h1>Modelo didático<br>virtual<br>de um<br>buraco negro</h1>
+                  <h1>Modelo Didático<br>Virtual<br>de um<br>Buraco Negro</h1>
                   <button class="cta">Veja mais
                     <span class="btn-background"></span>
                   </button>
@@ -269,7 +269,7 @@
 
             <li class="l-section section">
               <div class="work">
-                <h2>Quem somos</h2>
+                <h2>Quem Somos</h2>
                 <div class="work--lockup">
                   <ul class="slider">
                     <li class="slider--item slider--item-left">
@@ -284,28 +284,28 @@
                     <li class="slider--item slider--item-center">
                       <a href="#0">
                         <div class="slider--item-image">
-                          <img src="assets/img/work-metiew-smith.jpg" alt="Sidney Maia Araujo">
-                        </div>
-                        <p class="slider--item-title">Sidney Maia Araújo</p>
-                        <p class="slider--item-description">Orientador e Professor de Física</p>
-                      </a>
-                    </li>
-                    <li class="slider--item slider--item-right">
-                      <a href="#0">
-                        <div class="slider--item-image">
                           <img src="assets/img/work-alex-nowak.jpg" alt="Maria Eduarda Pasquel">
                         </div>
                         <p class="slider--item-title">Maria Eduarda Pasquel</p>
                         <p class="slider--item-description">Aluna do 3º ano de Informática</p>
                       </a>
                     </li>
-                    <li class="slider--item slider--item-last">
+                    <li class="slider--item slider--item-right">
                       <a href="#0">
                         <div class="slider--item-image">
                           <img src="assets/img/milkway.jpg" alt="Paulo Vitor">
                         </div>
                         <p class="slider--item-title">Paulo Vitor</p>
                         <p class="slider--item-description">Aluno do 3º ano de Informática</p>
+                      </a>
+                    </li>
+                    <li class="slider--item slider--item-last">
+                      <a href="#0">
+                        <div class="slider--item-image">
+                          <img src="assets/img/work-metiew-smith.jpg" alt="Sidney Maia Araujo">
+                        </div>
+                        <p class="slider--item-title">Sidney Maia Araújo</p>
+                        <p class="slider--item-description">Orientador e Professor de Física</p>
                       </a>
                     </li>
                   </ul>
@@ -342,7 +342,7 @@
       <li>Mapa Conceitual</li>
       <li>Simulação</li>
       <li>Calculadora</li>
-      <li>Quem somos</li>
+      <li>Quem Somos</li>
     </ul>
   </div>
 
