Começa o mapa conceitual

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta name="keywords" content="black hole, meta, buraco negro">
   <link rel="stylesheet" href="assets/css/main.css">
   <link rel="stylesheet" href="assets/css/timeline.css">
+  <link rel="stylesheet" href="assets/css/mind-map.css">
   <link rel="icon" href="assets/img/milkyway-favicon.png" type="image/ico" />
   <link rel="shortcut icon" href="assets/img/milkyway-favicon.png" type="image/x-icon" />
 
@@ -45,11 +46,11 @@
           <nav class="l-side-nav">
             <ul class="side-nav">
               <li class="is-active"><span>Página<br>Inicial</span></li>
-              <li><span>Linha<br>do<br>Tempo</span></li>
+              <li><span>Linha do<br>Tempo</span></li>
               <li><span>Mapa<br>Conceitual</span></li>
               <li><span>Simulação</span></li>
               <li><span>Calculadora</span></li>
-              <li><span>Quem Somos</span></li>
+              <li><span>Quem somos</span></li>
             </ul>
           </nav>
           <ul class="l-main-content main-content">
@@ -57,7 +58,7 @@
 
               <div class="intro">
                 <div class="intro--banner">
-                  <h1>Modelo Didático<br>Virtual<br>de um<br>Buraco Negro</h1>
+                  <h1>Modelo didático<br>virtual<br>de um<br>buraco negro</h1>
                   <button class="cta">Veja mais
                     <span class="btn-background"></span>
                   </button>
@@ -328,9 +329,53 @@
             </li>
 
             <li class="l-section section">
-              <div class="contact">
-
-              </div>
+                <div id="mind-map">                
+                    <svg width="1100" height="600">
+                      <g>
+                        <rect class="rects" x="600" y="50" width="110" height="55" />
+                        <text class="texts" x="608" y="57" >
+                          <tspan x="600" dx="10" dy="18">BURACO</tspan>
+                          <tspan x="600" dx="16" dy="18">NEGRO</tspan>                          
+                        </text>
+                      </g>
+                      <line class="lines" x1="610" y1="80" x2="330" y2="170" />
+                      <g>
+                        <rect class="rects" x="250" y="150" width="150" height="40" />
+                        <text class="texts" x="260" y="160" >
+                          <tspan dx="5" dy="18">GRAVIDADE</tspan>
+                        </text>
+                      </g>
+                      <line class="lines" x1="625" y1="95" x2="525" y2="210" />
+                      <g>
+                        <rect class="rects" x="420" y="200" width="150" height="40" />
+                        <text class="texts" x="420" y="200" >
+                          <tspan dx="15" dy="27">GEOMETRIA</tspan>
+                        </text>
+                      </g>
+                      <line class="lines" x1="660" y1="95" x2="680" y2="230" />
+                      <g>
+                        <rect class="rects" x="610" y="220" width="150" height="40" />
+                        <text class="texts" x="610" y="220" >
+                          <tspan dx="15" dy="26">DENSIDADE</tspan>
+                        </text>
+                      </g>
+                      <line class="lines" x1="680" y1="95" x2="815" y2="190" />
+                      <g>
+                        <rect class="rects" x="810" y="180" width="100" height="58" />
+                        <text class="texts" x="810" y="180" >
+                          <tspan x="810" dx="10" dy="24">ESPAÇO</tspan>
+                          <tspan x="810" dx="14" dy="24">TEMPO</tspan>
+                        </text>
+                      </g>
+                      <line class="lines" x1="700" y1="80" x2="980" y2="165" />
+                      <g>
+                        <rect class="rects" x="970" y="150" width="100" height="40" />
+                        <text class="texts" x="970" y="150" >
+                          <tspan dx="15" dy="26">MASSA</tspan>
+                        </text>
+                      </g>
+                    </svg>
+                  </div>
             </li>
 
             <li class="l-section section">
@@ -343,28 +388,12 @@
             </li>
 
             <li class="l-section section">
-              <div class="a">
-                <svg width="1000" height="600">
-                  <g>
-                    <rect class="rects" x="100" y="100" />
-                    <text class="texts" x="110" y="120">
-                      hello
-                    </text>
-                  </g>
-                  <line class="lines" x1="190" y1="132" x2="260" y2="260" />
-                  <g>
-                    <rect class="rects" x="250" y="250" />
-                    <text class="texts" x="260" y="270">
-                      hello2
-                    </text>
-                  </g>
-                </svg>
-              </div>
+              <div></div>
             </li>
 
             <li class="l-section section">
               <div class="work">
-                <h2>Quem Somos</h2>
+                <h2>Quem somos</h2>
                 <div class="work--lockup">
                   <ul class="slider">
                     <li class="slider--item slider--item-left">
@@ -399,8 +428,8 @@
                         <div class="slider--item-image">
                           <img src="assets/img/sidneymaia.jpg" alt="Sidney Maia Araujo">
                         </div>
-                        <p class="slider--item-title">Sidney Maia Araújo</p>
-                        <p class="slider--item-description">Orientador e Professor de Física</p>
+                        <p class="slider--item-title">Paulo Vitor</p>
+                        <p class="slider--item-description">Aluno do 3º ano de Informática</p>
                       </a>
                     </li>
                   </ul>
@@ -437,7 +466,7 @@
       <li>Mapa Conceitual</li>
       <li>Simulação</li>
       <li>Calculadora</li>
-      <li>Quem Somos</li>
+      <li>Quem somos</li>
     </ul>
   </div>
 
