Termina a parte estática do mapa

--- a/index.html
+++ b/index.html
@@ -172,7 +172,6 @@
                           <img src="assets/img/timeline/linguinhainsten.jpg" alt="imagemLinhaTempo" />
                         </div>
                         <div class="timeline-item-body">
-
                           <h1>Teoria da Relatividade Geral</h1>
                           <h2>Albert Einstein</h2>
                           <p>Albert, 10 anos após publicar sobre a Teoria da Relatividade Restrita, propôs a Teoria da
@@ -332,48 +331,84 @@
 
             <li class="l-section section">
                 <div id="mind-map">                
-                    <svg width="1100" height="600">
+                    <svg width="1200" height="600">
                       <g>
-                        <rect class="rects" x="600" y="50" width="110" height="55" />
-                        <text class="texts" x="608" y="57" >
-                          <tspan x="600" dx="10" dy="18">BURACO</tspan>
-                          <tspan x="600" dx="16" dy="18">NEGRO</tspan>                          
+                        <rect class="rects" x="600" y="70" width="110" height="50" />
+                        <text class="texts" x="600" y="70" >
+                          <tspan x="600" dx="10" dy="22">BURACO</tspan>
+                          <tspan x="600" dx="15" dy="20">NEGRO</tspan>                          
                         </text>
                       </g>
-                      <line class="lines" x1="610" y1="80" x2="330" y2="170" />
+                      <line class="lines" x1="610" y1="100" x2="300" y2="210" />
                       <g>
-                        <rect class="rects" x="250" y="150" width="150" height="40" />
-                        <text class="texts" x="260" y="160" >
-                          <tspan dx="5" dy="18">GRAVIDADE</tspan>
+                        <rect class="rects" x="230" y="200" width="150" height="35" />
+                        <text class="texts" x="230" y="200" >
+                          <tspan dx="15" dy="25">GRAVIDADE</tspan>
                         </text>
                       </g>
-                      <line class="lines" x1="625" y1="95" x2="525" y2="210" />
+                      <line class="lines" x1="625" y1="110" x2="500" y2="250" />
                       <g>
-                        <rect class="rects" x="420" y="200" width="150" height="40" />
-                        <text class="texts" x="420" y="200" >
-                          <tspan dx="15" dy="27">GEOMETRIA</tspan>
+                        <rect class="rects" x="420" y="230" width="150" height="35" />
+                        <text class="texts" x="420" y="230" >
+                          <tspan dx="15" dy="25">GEOMETRIA</tspan>
                         </text>
                       </g>
-                      <line class="lines" x1="660" y1="95" x2="680" y2="230" />
+                      <line class="lines" x1="660" y1="115" x2="680" y2="250" />
                       <g>
-                        <rect class="rects" x="610" y="220" width="150" height="40" />
-                        <text class="texts" x="610" y="220" >
-                          <tspan dx="15" dy="26">DENSIDADE</tspan>
+                        <rect class="rects" x="600" y="250" width="150" height="35" />
+                        <text class="texts" x="600" y="250" >
+                          <tspan dx="15" dy="25">DENSIDADE</tspan>
                         </text>
                       </g>
-                      <line class="lines" x1="680" y1="95" x2="815" y2="190" />
+                      <line class="lines" x1="680" y1="115" x2="850" y2="260" />
                       <g>
-                        <rect class="rects" x="810" y="180" width="100" height="58" />
-                        <text class="texts" x="810" y="180" >
-                          <tspan x="810" dx="10" dy="24">ESPAÇO</tspan>
-                          <tspan x="810" dx="14" dy="24">TEMPO</tspan>
+                        <rect class="rects" x="840" y="250" width="100" height="60" />
+                        <text class="texts" x="840" y="250" >
+                          <tspan x="840" dx="10" dy="25">ESPAÇO</tspan>
+                          <tspan x="840" dx="14" dy="25">TEMPO</tspan>
                         </text>
                       </g>
-                      <line class="lines" x1="700" y1="80" x2="980" y2="165" />
+                      <line class="lines" x1="700" y1="100" x2="980" y2="185" />
                       <g>
-                        <rect class="rects" x="970" y="150" width="100" height="40" />
-                        <text class="texts" x="970" y="150" >
-                          <tspan dx="15" dy="26">MASSA</tspan>
+                        <rect class="rects" x="970" y="180" width="100" height="35" />
+                        <text class="texts" x="970" y="180" >
+                          <tspan dx="15" dy="25">MASSA</tspan>
+                        </text>
+                      </g>
+                      <line class="lines" x1="310" y1="225" x2="535" y2="405" />
+                      <line class="lines" x1="480" y1="260" x2="555" y2="405" />
+                      <line class="lines" x1="680" y1="280" x2="575" y2="405" />
+                      <line class="lines" x1="850" y1="280" x2="615" y2="405" />
+                      <g>
+                        <rect class="rects" x="450" y="400" width="200" height="35" />
+                        <text class="texts" x="450" y="400" >
+                          <tspan dx="15" dy="25">SINGULARIDADE</tspan>
+                        </text>
+                      </g>
+                      <line class="lines" x1="640" y1="420" x2="800" y2="460" />
+                      <line class="lines" x1="890" y1="305" x2="870" y2="460" />
+                      <g>
+                        <rect class="rects" x="790" y="430" width="150" height="60" />
+                        <text class="texts" x="790" y="430" >
+                          <tspan x="790" dx="12" dy="25">HORIZONTE</tspan>
+                          <tspan x="790" dx="10" dy="25">DE EVENTOS</tspan>
+                        </text>
+                      </g>
+                      <line class="lines" x1="1020" y1="210" x2="1100" y2="490" />
+                      <line class="lines" x1="920" y1="460" x2="1080" y2="510" />
+                      <g>
+                        <rect class="rects" x="1050" y="480" width="120" height="60" />
+                        <text class="texts" x="1050" y="480" >
+                          <tspan x="1050" dx="10" dy="25">DISCO DE</tspan>
+                          <tspan x="1050" dx="10" dy="25">ACREÇÃO</tspan>
+                        </text>
+                      </g>
+                      <line class="lines" x1="550" y1="430" x2="640" y2="510" />
+                      <g>
+                        <rect class="rects" x="550" y="500" width="165" height="60" />
+                        <text class="texts" x="550" y="500" >
+                          <tspan x="550" dx="10" dy="25">RELATIVIDADE</tspan>
+                          <tspan x="550" dx="10" dy="25">VS QUÂNTICA</tspan>
                         </text>
                       </g>
                     </svg>
@@ -430,8 +465,8 @@
                         <div class="slider--item-image">
                           <img src="assets/img/sidneymaia.jpg" alt="Sidney Maia Araujo">
                         </div>
-                        <p class="slider--item-title">Paulo Vitor</p>
-                        <p class="slider--item-description">Aluno do 3º ano de Informática</p>
+                        <p class="slider--item-title">Sidney Maia Araújo</p>
+                        <p class="slider--item-description">Professor e orientador</p>
                       </a>
                     </li>
                   </ul>
